--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html>
-<head>Hello World!</head>
-<body>Hello World</body>
+<head><h1>Hello, World!</h1></head>
+<body></body>
 <html>
